infra/envoy/envoy.yaml
static_resources:
  listeners:
    - name: webrtc_gateway
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: emulator_services
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: "OPTIONS"
                          direct_response:
                            status: 204
                          response_headers_to_add:
                            - header:
                                key: "access-control-allow-origin"
                                value: "*"
                            - header:
                                key: "access-control-allow-methods"
                                value: "GET, PUT, DELETE, POST, OPTIONS"
                            - header:
                                key: "access-control-allow-headers"
                                value: "x-grpc-web,content-type,x-user-agent,grpc-timeout,authorization,keep-alive,origin,accept"
                            - header:
                                key: "access-control-expose-headers"
                                value: "grpc-status,grpc-message"
                            - header:
                                key: "access-control-max-age"
                                value: "86400"
                        - match:
                            prefix: "/android.emulation.control.Rtc"
                          route:
                            cluster: emulator_grpc
                            timeout: 0s
                            max_stream_duration:
                              grpc_timeout_header_max: 0s
                        - match:
                            prefix: "/android.emulation.control"
                          route:
                            cluster: emulator_grpc
                            timeout: 0s
                            max_stream_duration:
                              grpc_timeout_header_max: 0s
                        - match:
                            prefix: "/healthz"
                          direct_response:
                            status: 200
                            body:
                              inline_string: "ok"
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 404
                      cors:
                        allow_origin_string_match:
                          - safe_regex:
                              google_re2: {}
                              regex: ".*"
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: >
                          x-grpc-web,content-type,x-user-agent,grpc-timeout,authorization,keep-alive,origin,accept
                        expose_headers: grpc-status,grpc-message
                        max_age: "86400"
                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog

  clusters:
    - name: emulator_grpc
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: emulator_grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 8554

admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
